Successfully inspect main-class and AbstractApplicationContext